<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.example.android.scorekeeper.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/main_scr_hdr_padding"
        android:text="@string/homepage_header"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/homepage_button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/button_marginBottom"
        android:layout_marginLeft="@dimen/button_marginLeftRight"
        android:layout_marginRight="@dimen/button_marginLeftRight"
        android:text="@string/homepage_button1_label"
        android:textStyle="bold" />

    <Button
        android:id="@+id/homepage_button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/button_marginBottom"
        android:layout_marginLeft="@dimen/button_marginLeftRight"
        android:layout_marginRight="@dimen/button_marginLeftRight"
        android:text="@string/homepage_button2_label"
        android:textStyle="bold" />

    <Button
        android:id="@+id/homepage_button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/button_marginBottom"
        android:layout_marginLeft="@dimen/button_marginLeftRight"
        android:layout_marginRight="@dimen/button_marginLeftRight"
        android:text="@string/homepage_button3_label"
        android:textStyle="bold" />

</LinearLayout>
