<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.scorekeeper.FootballCounterActivity">

    <LinearLayout
        android:id="@+id/football_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        >
        <ImageView
            android:id="@+id/football_image"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/football"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/football_header">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:padding="16dp"
                android:text="@string/teamA_name"
                android:textColor="#616161"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@android:color/black"
                android:paddingBottom="8dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/fb_start_score"
                android:textColor="@android:color/white"
                android:textSize="56sp" />

            <Button
                android:id="@+id/team_a_td_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="incrementScoreTeamA"
                android:text="@string/touchdown_button"
                android:textStyle="bold" />

            <Button
                android:id="@+id/team_a_pat_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="incrementScoreTeamA"
                android:text="@string/pat_button"
                android:textStyle="bold" />

            <Button
                android:id="@+id/team_a_2ptconv_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="incrementScoreTeamA"
                android:text="@string/two_pt_conv_button"
                android:textStyle="bold" />

            <Button
                android:id="@+id/team_a_fg_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="incrementScoreTeamA"
                android:text="@string/field_goal_button"
                android:textStyle="bold" />

            <Button
                android:id="@+id/team_a_safety_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="incrementScoreTeamA"
                android:text="@string/safety_button"
                android:textStyle="bold" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray"></View>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:padding="16dp"
                android:text="@string/teamB_name"
                android:textColor="#616161"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@android:color/black"
                android:paddingBottom="8dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/fb_start_score"
                android:textColor="@android:color/white"
                android:textSize="56sp"/>

            <Button
                android:id="@+id/team_b_td_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="incrementScoreTeamB"
                android:text="@string/touchdown_button"
                android:textStyle="bold" />

            <Button
                android:id="@+id/team_b_pat_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="incrementScoreTeamB"
                android:text="@string/pat_button"
                android:textStyle="bold" />

            <Button
                android:id="@+id/team_b_2ptconv_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="incrementScoreTeamB"
                android:text="@string/two_pt_conv_button"
                android:textStyle="bold" />

            <Button
                android:id="@+id/team_b_fg_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="incrementScoreTeamB"
                android:text="@string/field_goal_button"
                android:textStyle="bold" />

            <Button
                android:id="@+id/team_b_safety_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="incrementScoreTeamB"
                android:text="@string/safety_button"
                android:textStyle="bold" />        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"
        android:onClick="resetScores"
        android:text="@string/reset_button_label"
        android:textStyle="bold" />
</RelativeLayout>