<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.example.android.scorekeeper.BasketballCounterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/basketball_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/hdr_image_marginBottomTop"
            android:layout_marginTop="@dimen/hdr_image_marginBottomTop"
            android:gravity="center">

            <ImageView
                android:id="@+id/basketball_image"
                android:layout_width="@dimen/hdr_image_layout_width"
                android:layout_height="@dimen/hdr_image_layout_height"
                android:src="@drawable/basketball"
                tools:ignore="ContentDescription" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/basketball_body_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/basketball_header"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="@dimen/team_column_layoutWidth"
                android:layout_height="wrap_content"
                android:layout_weight="@dimen/team_column_layoutWeight"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/team_columnHdr_padding"
                    android:text="@string/teamA_name"
                    android:textColor="@color/colorTeamColumnHdr"
                    android:textSize="@dimen/team_columnHdr_textSize" />

                <TextView
                    android:id="@+id/team_a_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/bkb_score_marginBottom"
                    android:background="@color/colorScoreBackground"
                    android:text="@string/basketball_default_score"
                    android:textColor="@color/colorScoreText"
                    android:textSize="@dimen/score_textSize" />

                <Button
                    android:id="@+id/team_a_3pt_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/button_marginBottom"
                    android:layout_marginLeft="@dimen/button_marginLeftRight"
                    android:layout_marginRight="@dimen/button_marginLeftRight"
                    android:onClick="incrementScoreTeamA"
                    android:text="@string/three_pt_button_label"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/team_a_2pt_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/button_marginBottom"
                    android:layout_marginLeft="@dimen/button_marginLeftRight"
                    android:layout_marginRight="@dimen/button_marginLeftRight"
                    android:onClick="incrementScoreTeamA"
                    android:text="@string/two_pt_button_label"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/team_a_ft_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/button_marginLeftRight"
                    android:layout_marginRight="@dimen/button_marginLeftRight"
                    android:onClick="incrementScoreTeamA"
                    android:text="@string/freethrow_button_label"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="@dimen/vertical_line_width"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/vertical_line_margin"
                android:background="@color/colorVerticalLine"></View>

            <LinearLayout
                android:layout_width="@dimen/team_column_layoutWidth"
                android:layout_height="wrap_content"
                android:layout_weight="@dimen/team_column_layoutWeight"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/team_columnHdr_padding"
                    android:text="@string/teamB_name"
                    android:textColor="@color/colorTeamColumnHdr"
                    android:textSize="@dimen/team_columnHdr_textSize" />

                <TextView
                    android:id="@+id/team_b_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/bkb_score_marginBottom"
                    android:background="@color/colorScoreBackground"
                    android:text="@string/basketball_default_score"
                    android:textColor="@color/colorScoreText"
                    android:textSize="@dimen/score_textSize" />

                <Button
                    android:id="@+id/team_b_3pt_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/button_marginBottom"
                    android:layout_marginLeft="@dimen/button_marginLeftRight"
                    android:layout_marginRight="@dimen/button_marginLeftRight"
                    android:onClick="incrementScoreTeamB"
                    android:text="@string/three_pt_button_label"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/team_b_2pt_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/button_marginBottom"
                    android:layout_marginLeft="@dimen/button_marginLeftRight"
                    android:layout_marginRight="@dimen/button_marginLeftRight"
                    android:onClick="incrementScoreTeamB"
                    android:text="@string/two_pt_button_label"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/team_b_ft_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/button_marginLeftRight"
                    android:layout_marginRight="@dimen/button_marginLeftRight"
                    android:onClick="incrementScoreTeamB"
                    android:text="@string/freethrow_button_label"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/basketball_body_linearlayout"
            android:layout_marginTop="@dimen/reset_marginTop"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/reset_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="@dimen/button_marginBottom"
                android:layout_marginLeft="@dimen/reset_marginLeftRight"
                android:layout_marginRight="@dimen/reset_marginLeftRight"
                android:onClick="resetScores"
                android:text="@string/reset_button_label"
                android:textStyle="bold" />
        </LinearLayout>

    </RelativeLayout>

</ScrollView>